external-crates/move/crates/move-compiler/tests/move_check/parser/global_access_pack.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/global_access_pack.move:3:9
  │
3 │         ::S { }
  │         ^^
  │         │
  │         Unexpected '::'
  │         Expected an expression term
